--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
         <li> <strong>Parul University  |  2022-2026</strong></li>
         <p>Bachelor Of Technology in Computer Engineering</p>
     <ul>
-        <li> CGPA(till 5<sub>th</sub> Semester) : 8.24</li>
+        <li> CGPA(till 5<sup>th</sup> Semester) : 8.24</li>
     </ul>
     </ul>
     <ul>
